# trimly

./: .env  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
src/trimly/: __init__.py  constants.py  core.py  trimly.py
src/trimly/configs/: __init__.py  configs.py
src/trimly/utils/: __init__.py  exceptions.py  ffmpeg_availability.py  file_metadata.py  file_validation.py
