[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trimly"
version = "0.0.1"
description = "Trimly - Remove pauses from voiceovers"
authors = [
  { name = "Usama Arshad", email = "hello@usamaraajput.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "ffmpeg-python",
  "gradio"
]
keywords = ["voiceover", "pause-removal", "ffmpeg", "gradio"]

[project.urls]
Homepage = "https://github.com/LogicWeaver/trimly"
Repository = "https://github.com/LogicWeaver/trimly"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
