[project]
name = "trimly"
version = "1.1.0"
description = "Professional silence removal for voice recordings using FFmpeg"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "audio", "voiceover", "silence-removal", "ffmpeg", "gradio",
    "podcast", "voice-processing", "audio-editing"
]
authors = [
    { name = "Usama Arshad", email = "hello@usamaraajput.com" }
]
maintainers = [
    { name = "Usama Arshad", email = "hello@usamaraajput.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gradio>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/LogicWeaver/trimly"
Repository = "https://github.com/LogicWeaver/trimly"
Documentation = "https://github.com/LogicWeaver/trimly#readme"
"Bug Tracker" = "https://github.com/LogicWeaver/trimly/issues"
Changelog = "https://github.com/LogicWeaver/trimly/releases"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["trimly*"]
exclude = ["*.tests", "*.tests.*"]